# fortune-cookie

./: README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs
frontend/: Dockerfile  index.html  nginx.conf
k8s-manifests/: backend-deployment.yaml  backend-service.yaml  frontend-deployment.yaml  frontend-service.yaml  ingress.yaml
